# Velib-Pipeline-Data

./: .env.example  .gitignore  Dockerfile  README.md  docker-compose.yml  pyproject.toml
.github/workflows/: dbt_ci.yml
credentials/: gcp-service-account.json.example
dags/: velib_availability_dag.py  velib_dbt_dag.py  velib_stations_dag.py
exemples/: emp_stations.json  tempsreel.json
monitoring/: docker-compose.monitoring.yml
monitoring/prometheus/: prometheus.yml
scripts/: test_api.py
src/velib/: __init__.py  api_client.py  gcs_client.py  schemas.py
velib_dbt/: .user.yml  dbt_project.yml  profiles.yml
velib_dbt/models/marts/: mart_demand_forecast.sql  mart_station_availability.sql  schema.yml
velib_dbt/models/staging/: schema.yml  sources.yml  stg_availability.sql  stg_stations.sql
