[project]
name = "velib-pipeline-data"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.14"
dependencies = [
    "apache-airflow>=3.2.1",
    "apache-airflow-providers-google>=21.3.0",
    "dbt-snowflake>=1.11.5",
    "requests>=2.34.2",
    "snowflake-connector-python>=4.5.0",
]
